--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
@@ -1,4 +1,7 @@
-<main class="container">
+<main class="w-full container mx-auto p-4 md:py-8 min-h-screen">
   <app-header></app-header>
 
+  <app-card></app-card>
+
+  <app-footer></app-footer>
 </main>
