--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/card/card.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/card/card.component.html
@@ -1,9 +1,9 @@
-<div class="grid sm:grid-cols-1 md:grid-cols-4 gap-6 mt-10">
+<div class="flex sm:flex-col md:flex-row justify-between sm:grid-cols-1 mx-auto w-full gap-6 mt-10 z-50 relative">
   <a
     *ngFor="let card of cards"
     [ngSwitch]="card.red"
     href="#"
-    class="flex flex-col items-center w-52 pb-4 bg-gray-100 rounded-lg border-t-4 shadow hover:scale-105 hover:bg-gray-300"
+    class="flex flex-col items-center w-80 pb-4 bg-slate-100 dark:bg-darkCard rounded-lg border-t-4 shadow hover:scale-105 hover:bg-gray-300 hover:dark:bg-hoverCard"
   >
     <div
       class="border-t-4 w-full border-facebook pt-6 -mt-1 rounded-md"
@@ -23,10 +23,10 @@
     ></div>
     <div class="flex gap-2 mb-4">
       <img [src]="card.icon" alt="icon-red-social" />
-      <p class="text-sm">{{ card.user }}</p>
+      <p class="text-sm dark:text-textDark">{{ card.user }}</p>
     </div>
-    <h5 class="text-5xl font-bold tracking-tight">{{ card.followers }}</h5>
-    <p class="font-normal text-sm text-gray-500 tracking-widest mb-4">
+    <h5 class="text-7xl font-bold tracking-tight dark:text-textWhite">{{ card.followers }}</h5>
+    <p class="font-normal text-sm text-gray-500 dark:text-textDark tracking-widest mb-4">
       FOLLOWERS
     </p>
     <div class="flex items-center gap-1">
