--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/footer/footer.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/footer/footer.component.html
@@ -1,9 +1,8 @@
-<footer class="bg-white rounded-lg m-4">
-  <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
-    <hr class="my-6 border-gray-200 sm:mx-auto  lg:my-8" />
+<footer class="m-4 fixed w-full left-0 bottom-0">
+  <div class="w-full flex justify-center max-w-screen-xl mx-auto p-4 md:py-8 dark:text-textDark">
     <span>Challenge by</span>
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
       >Frontend Mentor</a
-    >. Coded by <a href="#">Daniel Theran Teran</a>.
+    >. Coded by <a href="#"> Daniel Theran Teran</a>.
   </div>
 </footer>
