--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-<div class="flex justify-between">
-  <div class="">
+<div class="flex justify-between z-50 relative">
+  <div class="dark:text-textWhite">
     <h1 class="text-3xl font-bold">Social Media Dashboard</h1>
-    <p class="text-gray-300">Total Followers: 23,004</p>
+    <p class="text-gray-500">Total Followers: 23,004</p>
   </div>
   <button>
     <label class="relative inline-flex items-center mb-4 cursor-pointer">
