add component overview

--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
@@ -1,8 +1,6 @@
 <main class="w-full container mx-auto p-4 md:py-8 min-h-screen">
   <div class="absolute w-full h-60 top-0 left-0 bg-topPatterLigth dark:bg-topPatterDark z-0"></div>
   <app-header></app-header>
-
   <app-card [cards]="cards"></app-card>
-
-  <app-footer></app-footer>
+  <app-overview></app-overview>
 </main>
