--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
@@ -3,15 +3,15 @@
     <h1 class="text-3xl font-bold">Social Media Dashboard</h1>
     <p class="text-gray-500 font-bold">Total Followers: 23,004</p>
   </div>
-  <button>
-    <label class="relative inline-flex items-center mb-4 cursor-pointer">
-      <input type="checkbox" value="" class="sr-only peer" />
-      <div
-        class="w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"
-      ></div>
-      <span class="ml-3 text-sm font-medium text-gray-900 dark:text-gray-300"
+  <div>
+    <label class="relative inline-flex items-center mb-4 cursor-pointer gap-2">
+      <span class="ml-3 text-sm text-gray-900 font-bold dark:text-gray-300"
         >Dark Mode</span
       >
+      <input type="checkbox" value="" class="sr-only peer" />
+      <div
+        class="w-11 h-6 py-2 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:before:translate-x-full peer-checked:before:border-white before:content-[''] before:absolute before:top-0.5 before:bg-white before:border-gray-300 before:border before:rounded-full before:h-5 before:w-5 before:transition-all dark:border-gray-600 peer-checked:bg-gradient-to-r from-switchDarkTo to-switchDarkFrom"
+      ></div>
     </label>
-  </button>
+  </div>
 </div>
