--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/overview/overview.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/overview/overview.component.html
@@ -1,5 +1,5 @@
 <div class="mt-12 mb-5">
-  <h5 class="text-3xl font-bold text-gray-500 dark:text-textWhite">
+  <h5 class="text-3xl font-bold text-gray-600 dark:text-textWhite">
     Overview - Today
   </h5>
 </div>
@@ -11,13 +11,13 @@
     class="h-32 pb-4 bg-slate-100 dark:bg-darkCard rounded-lg shadow hover:scale-105 hover:bg-gray-300 hover:dark:bg-hoverCard p-6"
   >
     <div
-      class="flex justify-between items-center h-1/2 dark:text-textDark font-bold text-md"
+      class="flex justify-between items-center h-1/2 text-gray-500 dark:text-textDark font-bold text-md"
     >
       <span>{{ card.title }}</span>
       <img [src]="card.red" alt="icon-red" />
     </div>
     <div
-      class="flex justify-between items-center h-1/2 dark:text-textWhite font-bold text-3xl"
+      class="flex justify-between items-center h-1/2 text-gray-900 dark:text-textWhite font-bold text-3xl"
     >
       <span> {{ card.views }} </span>
       <div
