--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="mx-32 p-4 md:py-8 min-h-screen">
+<main class="xs:mx-6 sm:mx-0 md:mx-32 max-w-[1440px]: p-4 md:py-8 min-h-screen">
   <div class="absolute w-full h-60 top-0 left-0 bg-topPatterLigth dark:bg-topPatterDark z-0"></div>
   <app-header></app-header>
   <app-card [cards]="cards"></app-card>
