--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/card/card.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="grid sm:grid-cols-1 md:grid-cols-4 mx-auto w-full gap-6 mt-10 z-50 relative">
+<div class="grid xs:grid-cols-1 sm:grid-cols-2 md:grid-cols-4 mx-auto w-full gap-6 mt-10 z-50 relative">
   <a
     *ngFor="let card of cards"
     [ngSwitch]="card.red"
@@ -23,10 +23,10 @@
     ></div>
     <div class="flex gap-2 mb-4">
       <img [src]="card.icon" alt="icon-red-social" />
-      <p class="text-sm dark:text-textDark">{{ card.user }}</p>
+      <p class="text-sm font-bold text-gray-500 dark:text-textDark">{{ card.user }}</p>
     </div>
-    <h5 class="text-7xl font-bold tracking-tight dark:text-textWhite">{{ card.followers }}</h5>
-    <p class="font-normal text-sm text-gray-500 dark:text-textDark tracking-widest mb-4">
+    <h5 class="text-6xl font-bold tracking-tight text-gray-900 dark:text-textWhite">{{ card.followers }}</h5>
+    <p class="font-normal text-md text-gray-500 dark:text-textDark tracking-widest mb-4">
       FOLLOWERS
     </p>
     <div class="flex items-center gap-1">
