--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
@@ -3,13 +3,24 @@
     <h1 class="text-3xl font-bold">Social Media Dashboard</h1>
     <p class="text-gray-500 font-bold">Total Followers: 23,004</p>
   </div>
-  <div class="xs:border-t xs:border-slate-500 xs:mt-4 md:mt-0 md:border-none xs:pt-3 xs:flex justify-between items-center gap-3 ">
-    <div class="md:-mt-2 xs:-top-1 text-sm text-gray-500 font-bold dark:text-gray-300">
+  <div
+    class="xs:border-t xs:border-slate-500 xs:mt-4 md:mt-0 md:border-none xs:pt-3 xs:flex justify-between items-center gap-3"
+  >
+    <div
+      class="md:-mt-2 xs:-top-1 text-sm text-gray-500 font-bold dark:text-gray-300"
+    >
       <span>Dark Mode</span>
     </div>
     <div class="xs:mt-4 md:mt-2">
-      <label class="relative inline-flex items-center mb-4 cursor-pointer gap-2">
-        <input type="checkbox" value="" class="sr-only peer" />
+      <label
+        class="relative inline-flex items-center mb-4 cursor-pointer gap-2"
+      >
+        <input
+          type="checkbox"
+          class="sr-only peer"
+          (ngModelChange)="onChange($event)"
+          [(ngModel)]="isDarkActive"
+        />
         <div
           class="w-11 h-6 py-2 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:before:translate-x-full peer-checked:before:border-white before:content-[''] before:absolute before:top-0.5 before:bg-white before:border-gray-300 before:border before:rounded-full before:h-5 before:w-5 before:transition-all dark:border-gray-600 peer-checked:bg-gradient-to-r from-switchDarkTo to-switchDarkFrom"
         ></div>
