save data localStorage

--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
         <input
           type="checkbox"
           class="sr-only peer"
-          (ngModelChange)="onChange($event)"
+          (ngModelChange)="toggleTheme()"
           [(ngModel)]="isDarkActive"
         />
         <div
