--- a/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
+++ b/3. Junior/social-media-dashboard-with-theme-switcher-master/design/social-media-dashboard-app/src/app/app.component.html
@@ -2,5 +2,5 @@
   <div class="absolute w-full h-60 top-0 left-0 bg-topPatterLigth dark:bg-topPatterDark z-0"></div>
   <app-header></app-header>
   <app-card [users]="users"></app-card>
-  <app-overview></app-overview>
+  <app-overview [overviews]="overviews"></app-overview>
 </main>
